# ROCmForge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  MANUAL.md  OPTIMIZATION_PLAN.md  PERFORMANCE.md  PLAN.md  README.md  bench_llamacpp_15prompt.fish  bench_simple.rs  build.rs  hip_graph_device_pointer_bug.md  hip_graph_escalation_results.txt  hip_graph_smoke_results.txt  improvements.md  libarch.rlib  manual.md
.codegraph/: codegraph.db  config.json
.magellan/: rocmforge.db  rocmforge.db-shm
.perf/: README.md  perf_decode.sh
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.rocprofv3/: README.md  kernel-filter-ffn-down.yml  kernel-filter-gate-up.yml  pmc-ffn-down.yml  pmc-gate-up.yml  profile_decode.sh
benches/: README.md  bench_batched_lm_head.fish  bench_cpu_avx512.fish  bench_depth_threshold.sh  bench_full_15prompts.fish  bench_prefill_hipblas.fish  bench_prefill_wmma.fish  bench_prefill_wmma_attn.fish  bench_spec.sh  bench_tiled_sweep.fish  bench_tiled_sweep.sh  cpu_gemv.rs  gemm_q4k_q8.rs  gpu_decode.rs  kernels.rs  rocm_diff.fish  rocm_validate.fish
docs/: amd-rocm-7.2-findings.md  architecture_notes.md  batched_lm_head_plan.md  batched_verify.md  cli-guide.md  cpu_avx512_plan.md  gpu_quant_phase1.md  prefill_gemm_plan.md  q4_k_m_block_format.md  q6_k_block_format.md  research.md  spec_decode_milestone_summary.md  tiled_gemv_design.md
examples/: bench_q4_k_gemv_isolated.rs  bench_q4k_q8.rs  bench_quant_types.rs  bench_wmma_q4_k_isolated.rs  benchmark_real_model.rs  generate_report.rs  test_q5_0_model.rs  test_q6k_dequant.rs  test_real_weights.rs  test_tokens.rs
hip_kernels/: attention.hip  common.hip  elementwise.hip  norm.hip  norm_vulkan_style.hip  rope.hip
hip_kernels/quant/: CMakeLists.txt  common.hip  dequant_q4_0_to_f16.hip  q4_0_dequantize.hip  q4_0_fused.hip  q4_0_fused_norm_gate_up.hip  q4_0_fused_norm_gate_up_udot4.hip  q4_0_fused_norm_qkv_rope.hip  q4_0_fused_q8.hip  q4_0_fused_qkv_rope.hip  q4_0_gemm.hip  q4_0_gemv.hip  q4_0_gemv_batched.hip  q4_0_gemv_batched_tiled.hip  q4_0_gemv_gfx12.hip  q4_0_gemv_vulkan_style.hip  q4_0_quantize.hip  q4_0_verify.hip  q4_0_vulkan_style.hip  q4_1_dequantize.hip  q4_1_ffn_experimental.hip  q4_1_gemm.hip  q4_1_gemv.hip  q4_1_quantize.hip  q4_1_verify.hip  q4_k_dequantize.hip  q4_k_gemm.hip  q4_k_gemv.hip  q4_k_gemv_vulkan_style.hip  q4_k_q8_inline.hip  q4_k_quantize.hip  q4_k_verify.hip  q5_k_dequantize.hip  q5_k_gemm.hip  q5_k_gemv.hip  q5_k_quantize.hip  q5_k_verify.hip  q6_k_gemv.hip  q8_0_dequantize.hip  q8_0_gemm.hip  (+4 more)
hip_kernels_v1/: CMakeLists.txt  dequant_parity.hip  device_info.hip  smoke_test.hip
hip_kernels_v1/attention/: attention.hip
hip_kernels_v1/elementwise/: elementwise_block_a.hip  rope.hip
hip_kernels_v1/gemv/: gemv_q4_0_standard.hip  gemv_q4_k_gate_up_swiglu.hip  gemv_q4_k_mmvq.hip  gemv_q4_k_mmvq_fused.hip  gemv_q4_k_mmvq_residual.hip  gemv_q4_k_q8_inline.hip  gemv_q4_k_q8_inline_residual.hip  gemv_q4_k_q8_inline_sudot4.hip  gemv_q4_k_standard.hip  gemv_q6_k_mmvq.hip  gemv_q6_k_q8_inline.hip  gemv_q6_k_standard.hip  gemv_q8_0_standard.hip
hip_kernels_v1/kv_cache/: kv_cache_fp8.hip
hip_kernels_v1/quantize/: quantize_q8_1.hip  quantize_q8_1_mmq.hip
hip_kernels_v1/wmma/: mmq_q4_k.hip  mmq_q4_k_minimal.hip  mmq_q6_k.hip  wmma_gemm_q4_0_fp16.hip  wmma_gemm_q4_0_fp8.hip  wmma_gemm_q4_k_fp16.hip  wmma_gemm_q4_k_fp16_tiled.hip  wmma_gemm_q4_k_fp8.hip  wmma_gemm_q6_k_fp16.hip  wmma_gemm_q6_k_fp8.hip  wmma_gemm_q8_0_fp16.hip  wmma_gemm_q8_0_fp8.hip  wmma_i32_smoke.hip
profiling/: aggregate_decode_overhead.py  aggregate_prefill_overhead.py  baseline_2026-04-14.md  benchmark_progression.md  generate_q4_k_m_golden.py  post_all_fusions_2026-04-14.md  post_fusion_2026-04-14.md  profile_launch_overhead.fish  profile_spec_step.fish
results/: bench_llamacpp_15prompt.md  comparison_v0x_vs_v1_20260421.md  inference_test_20260421.md  inference_test_20260425.md  inference_test_with_monitor.md  phase1_final_15prompt.md  phase1_final_validation.md  phase1_step_1.13_model_introspection.md  phase1_step_1.14_quality_monitor.md  phase1_step_1.15_cli_integration.md  phase1_step_1.17_rocprof_baseline.md  phase2_dispatch_opt_15prompt.md  phase2_dispatch_optimization.md  phase2_fp8_kv_cache.md  phase2_fp8_kv_cache_15prompt_suite.md  phase2_hip_graph_15prompt.md  phase2_hip_graph_integration.md  phase2_llamacpp_kernel_analysis.md  phase2_mmvq_15prompt_suite.md  phase2_mmvq_fused_15prompt_suite.md  phase2_mmvq_gate_fusion.md  phase2_mmvq_kernel_port.md  phase2_mmvq_residual.md  phase2_mmvq_residual_15prompt_suite.md  phase2_multi_turn_15prompt_suite.md  phase2_multi_turn_streaming.md  phase2_post_2.1.5_rocprof_deepdive.md  phase2_post_cleanup_15prompt.md  phase2_post_graph_rocprof.md  phase2_post_multiturn_rocprof.md  phase2_post_unfuse_rocprof.md  phase2_q6k_mmvq_15prompt_suite.md  phase2_q6k_mmvq_port.md  phase2_q8_1_sharing.md  phase2_q8_1_sharing_15prompt_suite.md  phase2_quantize_q8_1.md  phase2_step_2.0.1_15prompt.md  phase2_step_2.0.1_sync_elimination.md  phase2_step_2.0.2_15prompt.md  phase2_step_2.0.2_residual_fused.md  (+42 more)
src/: bench_gemv.rs  bench_simple.rs  config.rs  lib.rs  logging.rs  main.rs
src_v1/: lib.rs
tests/: batched_lm_head_matches_sequential.rs  chat_multi_turn_correctness.rs  chat_single_turn_correctness.rs  cpu_avx512_matches_reference.rs  gemv_q4_k_correctness.rs  gemv_tiled_matches_reference.rs  gpu_decode_real.rs  gpu_ffn_experimental.rs  gpu_gemm_dispatch.rs  gpu_graph.rs  gpu_lm_head_dispatch.rs  gpu_q4_0_q8_dispatch.rs  gpu_q4_0_q8_residual_dispatch.rs  gpu_qkv_dispatch.rs  gpu_rms_norm_prototype.rs  gpu_safety_fallback.rs  gpu_test_utils.rs  gpu_vulkan_style_gemv_prototype.rs  gpu_vulkan_style_prototype.rs  gpu_vulkan_style_q4_k_prototype.rs  hip_submission_latency.rs  integration_end_to_end.rs  integration_gpu.rs  integration_q4k_q8.rs  kv_cache_gpu.rs  loader_integration.rs  prefill_hipblas_matches_gemv.rs  prefill_wmma_attention_e2e.rs  prefill_wmma_matches_hipblas.rs  q4_k_q8_inline_correctness.rs  quant_integration.rs  quant_sanity.rs  (+18 more)
(+529 files in other folders)
