[workspace]
members = [
    ".",
    "tools/rf-forge",
]
# tests_v1/smoke/ is a standalone workspace (Milestone 0 smoke harness);
# leave its own Cargo.toml intact so it stays isolated from the main build.

[package]
name = "rocmforge"
version = "0.3.0"
edition = "2021"
description = "AMD-first LLM inference engine for Qwen2.5, Qwen3, and Llama-3.1 on RDNA 4"

[dependencies]
# GGUF loading
memmap2 = "0.9"
half = "2"
# Tokenizer
regex = "1"
once_cell = "1"
# Error handling
thiserror = "2"
# Parallelism
rayon = "1"
# Hardware detection
sysinfo = "0.38"
# FFI
libc = "0.2"
# Compile HIP kernels
cc = "1.0"
# Timestamp generation
chrono = "0.4"
# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cache directory
dirs = "5"
# Ctrl+C handler for interactive chat CLI
ctrlc = "3.4"
# Line editor for the interactive chat prompt: arrow-key cursor
# navigation, in-session history, emacs-style shortcuts.
rustyline = "14"
# Structured logging and tracing (stderr, env-filtered)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
# GPU support requires ROCm/HIP installation
gpu = []
# v1.0 rebuild — includes src_v1/ module tree and hip_kernels_v1/ kernels
v1 = []
# Phase 3: AVX-512 CPU-Backend — placeholder, no cfg-gates yet
cpu-only = []

[dev-dependencies]
fastrand = "2"
serial_test = "3"
criterion = "0.5"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "rocmforge"
path = "src/main.rs"

[[bin]]
name = "bench_gemv"
path = "src/bench_gemv.rs"

[[bin]]
name = "bench_wmma_tiled"
path = "profiling/wmma_poc/bench_wmma_tiled.rs"
required-features = ["gpu"]

[[bin]]
name = "bench_wmma_q4_0"
path = "profiling/wmma_poc/bench_wmma_q4_0.rs"
required-features = ["gpu"]

[[bin]]
name = "bench_wmma_attention"
path = "profiling/wmma_poc/bench_wmma_attention.rs"
required-features = ["gpu"]

[[bin]]
name = "bench_wmma_attention_online"
path = "profiling/wmma_poc/bench_wmma_attention_online.rs"
required-features = ["gpu"]

[[bin]]
name = "bench_wmma_attention_gqa_causal"
path = "profiling/wmma_poc/bench_wmma_attention_gqa_causal.rs"
required-features = ["gpu"]

[[bench]]
name = "kernels"
harness = false

[[bench]]
name = "gpu_decode"
harness = false
required-features = ["gpu"]

# v1.0 build-system smoke integration test.
[[test]]
name = "build_test"
path = "tests_v1/build_test.rs"
required-features = ["v1"]

# v1.0 FFI-layer integration test (hits the real GPU).
[[test]]
name = "v1_ffi_test"
path = "tests_v1/ffi_test.rs"
required-features = ["v1", "gpu"]

# v1.0 VRAM arena integration test (hits the real GPU).
[[test]]
name = "v1_arena_test"
path = "tests_v1/arena_test.rs"
required-features = ["v1", "gpu"]

# v1.0 telemetry test — CPU-only profiler logic + GPU-gated timing / mapped-memory tests.
[[test]]
name = "v1_telemetry_test"
path = "tests_v1/telemetry_test.rs"
required-features = ["v1"]

# v1.0 GGUF loader test — CPU-only parser/metadata + GPU-gated VRAM upload tests.
[[test]]
name = "v1_gguf_test"
path = "tests_v1/gguf_test.rs"
required-features = ["v1"]

# v1.0 Dequant IR tests — Block 1: types, formats, validator, printer (CPU-only).
[[test]]
name = "v1_ir_test"
path = "tests_v1/ir_test.rs"
required-features = ["v1"]

# v1.0 Dequant IR golden-reference tests — Block 2: handcrafted + GGUF blocks
# vs. the CPU interpreter / v0.x reference dequant (CPU-only).
[[test]]
name = "v1_golden_test"
path = "tests_v1/golden_test.rs"
required-features = ["v1"]

# v1.0 GPU codegen emit / consistency test — writes the generated HIP
# source to hip_kernels_v1/dequant_parity.hip when
# ROCMFORGE_REGEN_KERNELS=1, and always checks that the committed file
# matches the codegen output.
[[test]]
name = "v1_codegen_emit_test"
path = "tests_v1/codegen_emit_test.rs"
required-features = ["v1"]

# v1.0 GPU parity tests — Block 3: CPU interpreter vs. GPU codegen
# kernels, bit-exact over 1000 random blocks per format. Denormal FTZ
# verification included.
[[test]]
name = "v1_parity_test"
path = "tests_v1/parity_test.rs"
required-features = ["v1", "gpu"]

# v1.0 WMMA codegen emit / consistency test — writes the generated HIP
# source to hip_kernels_v1/wmma/wmma_gemm_q4_0_fp16.hip when
# ROCMFORGE_REGEN_KERNELS=1, and always checks that the committed file
# matches the codegen output.
[[test]]
name = "v1_codegen_wmma_emit_test"
path = "tests_v1/codegen_wmma_emit_test.rs"
required-features = ["v1"]

# v1.0 WMMA GEMM PoC test — Block A: Q4_0 FP16 vs CPU-FP32 and v0.x.
[[test]]
name = "v1_wmma_test"
path = "tests_v1/wmma_test.rs"
required-features = ["v1", "gpu"]

# v1.0 GEMV codegen emit / drift test — writes hip_kernels_v1/gemv/*.hip
# with ROCMFORGE_REGEN_KERNELS=1, always-on consistency check.
[[test]]
name = "v1_codegen_gemv_emit_test"
path = "tests_v1/codegen_gemv_emit_test.rs"
required-features = ["v1"]

# v1.0 GEMV decode tests — Phase 1 Schritt 1.8. Shape tests vs CPU-FP32
# and v0.x GEMV launchers.
[[test]]
name = "v1_gemv_test"
path = "tests_v1/gemv_test.rs"
required-features = ["v1", "gpu"]

# v1.0 elementwise codegen emit / drift test.
[[test]]
name = "v1_codegen_elementwise_emit_test"
path = "tests_v1/codegen_elementwise_emit_test.rs"
required-features = ["v1"]

# v1.0 elementwise kernel tests — embedding, RMSNorm, residual add,
# RoPE, attention. Phase 1 Schritt 1.9.
[[test]]
name = "v1_elementwise_test"
path = "tests_v1/elementwise_test.rs"
required-features = ["v1", "gpu"]

# v1.0 computation-graph build tests — Phase 1 Schritt 1.10. CPU-only;
# Block A exercises `GraphBuilder::build` against the three Phase-1
# target models.
[[test]]
name = "v1_graph_test"
path = "tests_v1/graph_test.rs"
required-features = ["v1"]

# v1.0 inference pipeline tests — Phase 1 Schritt 1.11 Block A.
# Tokenizer + sampling + end-to-end generate(). Requires GPU.
[[test]]
name = "v1_inference_test"
path = "tests_v1/inference_test.rs"
required-features = ["v1", "gpu"]

# v1.0 self-tuning runtime tests — Phase 1 Schritt 1.12.
# CPU unit tests for the UCB1 Bandit + GPU integration tests that
# attach the Runtime to a real executor.
[[test]]
name = "v1_runtime_test"
path = "tests_v1/runtime_test.rs"
required-features = ["v1"]

# v1.0 Model Introspection tests — Phase 1 Schritt 1.13.
# Scans real GGUF files on disk; CPU-only (no GPU feature required).
[[test]]
name = "v1_introspection_test"
path = "tests_v1/introspection_test.rs"
required-features = ["v1"]

# v1.0 Quality Monitor tests — Phase 1 Schritt 1.14.
# CPU-only unit tests for drift + repetition primitives; GPU
# integration tests for calibration + false-positive invariant.
[[test]]
name = "v1_monitor_test"
path = "tests_v1/monitor_test.rs"
required-features = ["v1"]

# v1.0 CLI + integration smoke tests — Phase 1 Schritt 1.15.
# End-to-end startup flow, Qwen3 + Llama-3.1 generation, sequential
# model-load VRAM sanity.
[[test]]
name = "v1_integration_test"
path = "tests_v1/integration_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.0.1 — Bandit sync-elimination P0 gate.
# Confirms hipStreamSynchronize < 200 per 100 decode tokens and
# the bandit still converges on q8_inline with HIP-event timing.
[[test]]
name = "v1_sync_elimination_test"
path = "tests_v1/sync_elimination_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.0.2 — Residual-fused Q4_K Q8-inline GEMV.
# CPU graph-fusion detection + GPU parity/sync-count regression.
[[test]]
name = "v1_residual_fused_test"
path = "tests_v1/residual_fused_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.1 — Kernel-GA framework.
# Genome/validation/engine/compile-cache/JSONL-log unit tests plus a
# toy-fitness convergence check; GPU-gated sub-module exercises the
# AMDGPU-metadata VGPR reader against a real compiled code object.
[[test]]
name = "v1_ga_framework_test"
path = "tests_v1/ga_framework_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.2 — Parity + Stability validation.
# CPU-only math tests for the VALU reference + output-pair detection +
# stability variance math + JSONL events; GPU-gated tests confirm that
# the Phase-1 Q4_K / Q6_K GEMV kernels pass parity against the shared
# interpreter and hold variance under 2 %.
[[test]]
name = "v1_ga_parity_test"
path = "tests_v1/ga_parity_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.3 Block A — FP8 pair-packing regression
# guards. Code-inspection tests on the emitted WMMA FP8 source plus a
# GPU timing gate that fails if the Q4_K WMMA FP8/FP16 ratio drifts
# above 1.45× (pre-fix baseline 1.49×, post-fix 1.41×).
[[test]]
name = "v1_fp8_pair_packing_test"
path = "tests_v1/fp8_pair_packing_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.3 Block B — dynamic compile + load + launch.
# Thin vertical slice: hipcc invocation, hipModule FFI + RAII, and a
# num_waves-parametric gate_up_swiglu codegen. Dynamic kernel with
# num_waves=8 must match the static Phase-1 kernel bit-for-bit.
[[test]]
name = "v1_dynamic_kernel_test"
path = "tests_v1/dynamic_kernel_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.3 Block C — first real GA run.
# Mini-GA (Pop 8, Gen 5, Seed 42) over num_waves ∈ {1,2,4,8} on the
# gate_up_swiglu GEMV. Validates the full 6-phase pipeline: compile →
# post-compile VGPR → parity → benchmark → GA selection → Top-K
# stability. Seed-reproducible, JSONL-logged.
[[test]]
name = "v1_ga_block_c_test"
path = "tests_v1/ga_block_c_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.1.3 Block D — 2-D GA + Executor-integration.
# Mini-GA (Pop 12, Gen 8, Seed 42) over (num_waves, multi_row_cols)
# on the gate_up_swiglu GEMV (K=4096, N=14336 real bench shape).
# Adds DynamicGateUpHook for the graph executor and an end-to-end
# decode test (ROCMFORGE_RUN_REAL_MODEL_GPU_TESTS=1 + Qwen3-8B-Q4_K_M
# GGUF at ~/models).
[[test]]
name = "v1_ga_block_d_test"
path = "tests_v1/ga_block_d_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.1.3 Block E — Performance-Analyse +
# Regression-Check. Four-run benchmark (static 100 tok / static 50 tok
# / hook w8c4 / hook GA-winner) + sync-count P0 gate + 5-prompt
# smoke on both paths. Gated on ROCMFORGE_RUN_REAL_MODEL_GPU_TESTS.
[[test]]
name = "v1_ga_block_e_test"
path = "tests_v1/ga_block_e_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.1.5 — WMMA-batched prefill.
# execute_prefill_wmma walks the graph with seq_len > 1, dispatching
# WMMA GEMMs + batched elementwise + attention_prefill. Tests cover
# parity against the decode-loop, KV cache coherence, short-prompt
# fallback, performance (≥3× speedup), and end-to-end generate().
# Gated on ROCMFORGE_RUN_REAL_MODEL_GPU_TESTS + Qwen3-8B-Q4_K_M at ~/models.
[[test]]
name = "v1_prefill_wmma_test"
path = "tests_v1/prefill_wmma_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.1.5 FP8 follow-up.
# Switches dispatch_prefill_wmma_gemm from _fp16 to _fp8 WMMA
# kernels (Block-A pair-packing path). Tests: FP8/FP16 top-1
# parity, KV-cache coherence, throughput gate (≥ 900 tok/s on
# 31-tok prompt), end-to-end generate().
[[test]]
name = "v1_prefill_fp8_test"
path = "tests_v1/prefill_fp8_test.rs"
required-features = ["v1", "gpu"]

# v1.0 inference CLI entry point (Phase 1: --list-tensors only).
[[bin]]
name = "rocmforge-v1"
path = "src/bin/rocmforge_v1.rs"
required-features = ["v1"]

[profile.release]
opt-level = 3
lto = "thin"
