[workspace]
members = [
    ".",
    "tools/rf-forge",
]
# tests_v1/smoke/ is a standalone workspace (Milestone 0 smoke harness);
# leave its own Cargo.toml intact so it stays isolated from the main build.

[package]
name = "rocmforge"
version = "1.0.0"
edition = "2021"
description = "AMD-first LLM inference engine for Qwen3 and related GGUF Q4_K_M models on RDNA 4"

[dependencies]
# GGUF loading
memmap2 = "0.9"
half = "2"
# Tokenizer
regex = "1"
once_cell = "1"
# Error handling
thiserror = "2"
# Parallelism
rayon = "1"
# Hardware detection
sysinfo = "0.38"
# FFI
libc = "0.2"
# Compile HIP kernels
cc = "1.0"
# Timestamp generation
chrono = "0.4"
# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cache directory
dirs = "5"
# Ctrl+C handler for interactive chat CLI
ctrlc = "3.4"
# Line editor for the interactive chat prompt: arrow-key cursor
# navigation, in-session history, emacs-style shortcuts.
rustyline = "14"
# Structured logging and tracing (stderr, env-filtered)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
# GPU support requires ROCm/HIP installation
gpu = []
# v1.0 rebuild — includes src_v1/ module tree and hip_kernels_v1/ kernels
v1 = []
# Phase 3: AVX-512 CPU-Backend — placeholder, no cfg-gates yet
cpu-only = []

[dev-dependencies]
fastrand = "2"
serial_test = "3"
criterion = "0.5"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "rocmforge"
path = "src/main.rs"

[[bin]]
name = "bench_gemv"
path = "src/bench_gemv.rs"

[[bin]]
name = "bench_wmma_tiled"
path = "profiling/wmma_poc/bench_wmma_tiled.rs"
required-features = ["gpu"]

[[bin]]
name = "bench_wmma_q4_0"
path = "profiling/wmma_poc/bench_wmma_q4_0.rs"
required-features = ["gpu"]

[[bin]]
name = "bench_wmma_attention"
path = "profiling/wmma_poc/bench_wmma_attention.rs"
required-features = ["gpu"]

[[bin]]
name = "bench_wmma_attention_online"
path = "profiling/wmma_poc/bench_wmma_attention_online.rs"
required-features = ["gpu"]

[[bin]]
name = "bench_wmma_attention_gqa_causal"
path = "profiling/wmma_poc/bench_wmma_attention_gqa_causal.rs"
required-features = ["gpu"]

[[bench]]
name = "kernels"
harness = false

[[bench]]
name = "gpu_decode"
harness = false
required-features = ["gpu"]

# v1.0 build-system smoke integration test.
[[test]]
name = "build_test"
path = "tests_v1/build_test.rs"
required-features = ["v1"]

# v1.0 FFI-layer integration test (hits the real GPU).
[[test]]
name = "v1_ffi_test"
path = "tests_v1/ffi_test.rs"
required-features = ["v1", "gpu"]

# v1.0 VRAM arena integration test (hits the real GPU).
[[test]]
name = "v1_arena_test"
path = "tests_v1/arena_test.rs"
required-features = ["v1", "gpu"]

# v1.0 telemetry test — CPU-only profiler logic + GPU-gated timing / mapped-memory tests.
[[test]]
name = "v1_telemetry_test"
path = "tests_v1/telemetry_test.rs"
required-features = ["v1"]

# v1.0 GGUF loader test — CPU-only parser/metadata + GPU-gated VRAM upload tests.
[[test]]
name = "v1_gguf_test"
path = "tests_v1/gguf_test.rs"
required-features = ["v1"]

# v1.0 Dequant IR tests — Block 1: types, formats, validator, printer (CPU-only).
[[test]]
name = "v1_ir_test"
path = "tests_v1/ir_test.rs"
required-features = ["v1"]

# v1.0 Dequant IR golden-reference tests — Block 2: handcrafted + GGUF blocks
# vs. the CPU interpreter / v0.x reference dequant (CPU-only).
[[test]]
name = "v1_golden_test"
path = "tests_v1/golden_test.rs"
required-features = ["v1"]

# v1.0 GPU codegen emit / consistency test — writes the generated HIP
# source to hip_kernels_v1/dequant_parity.hip when
# ROCMFORGE_REGEN_KERNELS=1, and always checks that the committed file
# matches the codegen output.
[[test]]
name = "v1_codegen_emit_test"
path = "tests_v1/codegen_emit_test.rs"
required-features = ["v1"]

# v1.0 GPU parity tests — Block 3: CPU interpreter vs. GPU codegen
# kernels, bit-exact over 1000 random blocks per format. Denormal FTZ
# verification included.
[[test]]
name = "v1_parity_test"
path = "tests_v1/parity_test.rs"
required-features = ["v1", "gpu"]

# v1.0 WMMA codegen emit / consistency test — writes the generated HIP
# source to hip_kernels_v1/wmma/wmma_gemm_q4_0_fp16.hip when
# ROCMFORGE_REGEN_KERNELS=1, and always checks that the committed file
# matches the codegen output.
[[test]]
name = "v1_codegen_wmma_emit_test"
path = "tests_v1/codegen_wmma_emit_test.rs"
required-features = ["v1"]

# v1.0 WMMA GEMM PoC test — Block A: Q4_0 FP16 vs CPU-FP32 and v0.x.
[[test]]
name = "v1_wmma_test"
path = "tests_v1/wmma_test.rs"
required-features = ["v1", "gpu"]

# v1.0 GEMV codegen emit / drift test — writes hip_kernels_v1/gemv/*.hip
# with ROCMFORGE_REGEN_KERNELS=1, always-on consistency check.
[[test]]
name = "v1_codegen_gemv_emit_test"
path = "tests_v1/codegen_gemv_emit_test.rs"
required-features = ["v1"]

# v1.0 GEMV decode tests — Phase 1 Schritt 1.8. Shape tests vs CPU-FP32
# and v0.x GEMV launchers.
[[test]]
name = "v1_gemv_test"
path = "tests_v1/gemv_test.rs"
required-features = ["v1", "gpu"]

# v1.0 elementwise codegen emit / drift test.
[[test]]
name = "v1_codegen_elementwise_emit_test"
path = "tests_v1/codegen_elementwise_emit_test.rs"
required-features = ["v1"]

# v1.0 elementwise kernel tests — embedding, RMSNorm, residual add,
# RoPE, attention. Phase 1 Schritt 1.9.
[[test]]
name = "v1_elementwise_test"
path = "tests_v1/elementwise_test.rs"
required-features = ["v1", "gpu"]

# v1.0 computation-graph build tests — Phase 1 Schritt 1.10. CPU-only;
# Block A exercises `GraphBuilder::build` against the three Phase-1
# target models.
[[test]]
name = "v1_graph_test"
path = "tests_v1/graph_test.rs"
required-features = ["v1"]

# v1.0 inference pipeline tests — Phase 1 Schritt 1.11 Block A.
# Tokenizer + sampling + end-to-end generate(). Requires GPU.
[[test]]
name = "v1_inference_test"
path = "tests_v1/inference_test.rs"
required-features = ["v1", "gpu"]

# v1.0 self-tuning runtime tests — Phase 1 Schritt 1.12.
# CPU unit tests for the UCB1 Bandit + GPU integration tests that
# attach the Runtime to a real executor.
[[test]]
name = "v1_runtime_test"
path = "tests_v1/runtime_test.rs"
required-features = ["v1"]

# v1.0 Model Introspection tests — Phase 1 Schritt 1.13.
# Scans real GGUF files on disk; CPU-only (no GPU feature required).
[[test]]
name = "v1_introspection_test"
path = "tests_v1/introspection_test.rs"
required-features = ["v1"]

# v1.0 Quality Monitor tests — Phase 1 Schritt 1.14.
# CPU-only unit tests for drift + repetition primitives; GPU
# integration tests for calibration + false-positive invariant.
[[test]]
name = "v1_monitor_test"
path = "tests_v1/monitor_test.rs"
required-features = ["v1"]

# v1.0 CLI + integration smoke tests — Phase 1 Schritt 1.15.
# End-to-end startup flow, Qwen3 + Llama-3.1 generation, sequential
# model-load VRAM sanity.
[[test]]
name = "v1_integration_test"
path = "tests_v1/integration_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.0.1 — Bandit sync-elimination P0 gate.
# Confirms hipStreamSynchronize < 200 per 100 decode tokens and
# the bandit still converges on q8_inline with HIP-event timing.
[[test]]
name = "v1_sync_elimination_test"
path = "tests_v1/sync_elimination_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.0.2 — Residual-fused Q4_K Q8-inline GEMV.
# CPU graph-fusion detection + GPU parity/sync-count regression.
[[test]]
name = "v1_residual_fused_test"
path = "tests_v1/residual_fused_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.1 — Kernel-GA framework.
# Genome/validation/engine/compile-cache/JSONL-log unit tests plus a
# toy-fitness convergence check; GPU-gated sub-module exercises the
# AMDGPU-metadata VGPR reader against a real compiled code object.
[[test]]
name = "v1_ga_framework_test"
path = "tests_v1/ga_framework_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.2 — Parity + Stability validation.
# CPU-only math tests for the VALU reference + output-pair detection +
# stability variance math + JSONL events; GPU-gated tests confirm that
# the Phase-1 Q4_K / Q6_K GEMV kernels pass parity against the shared
# interpreter and hold variance under 2 %.
[[test]]
name = "v1_ga_parity_test"
path = "tests_v1/ga_parity_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.3 Block A — FP8 pair-packing regression
# guards. Code-inspection tests on the emitted WMMA FP8 source plus a
# GPU timing gate that fails if the Q4_K WMMA FP8/FP16 ratio drifts
# above 1.45× (pre-fix baseline 1.49×, post-fix 1.41×).
[[test]]
name = "v1_fp8_pair_packing_test"
path = "tests_v1/fp8_pair_packing_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.3 Block B — dynamic compile + load + launch.
# Thin vertical slice: hipcc invocation, hipModule FFI + RAII, and a
# num_waves-parametric gate_up_swiglu codegen. Dynamic kernel with
# num_waves=8 must match the static Phase-1 kernel bit-for-bit.
[[test]]
name = "v1_dynamic_kernel_test"
path = "tests_v1/dynamic_kernel_test.rs"
required-features = ["v1"]

# v1.0 Phase-2 Schritt 2.1.3 Block C — first real GA run.
# Mini-GA (Pop 8, Gen 5, Seed 42) over num_waves ∈ {1,2,4,8} on the
# gate_up_swiglu GEMV. Validates the full 6-phase pipeline: compile →
# post-compile VGPR → parity → benchmark → GA selection → Top-K
# stability. Seed-reproducible, JSONL-logged.
[[test]]
name = "v1_ga_block_c_test"
path = "tests_v1/ga_block_c_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.1.3 Block D — 2-D GA + Executor-integration.
# Mini-GA (Pop 12, Gen 8, Seed 42) over (num_waves, multi_row_cols)
# on the gate_up_swiglu GEMV (K=4096, N=14336 real bench shape).
# Adds DynamicGateUpHook for the graph executor and an end-to-end
# decode test (ROCMFORGE_RUN_REAL_MODEL_GPU_TESTS=1 + Qwen3-8B-Q4_K_M
# GGUF at ~/models).
[[test]]
name = "v1_ga_block_d_test"
path = "tests_v1/ga_block_d_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.1.3 Block E — Performance-Analyse +
# Regression-Check. Four-run benchmark (static 100 tok / static 50 tok
# / hook w8c4 / hook GA-winner) + sync-count P0 gate + 5-prompt
# smoke on both paths. Gated on ROCMFORGE_RUN_REAL_MODEL_GPU_TESTS.
[[test]]
name = "v1_ga_block_e_test"
path = "tests_v1/ga_block_e_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.1.5 — WMMA-batched prefill.
# execute_prefill_wmma walks the graph with seq_len > 1, dispatching
# WMMA GEMMs + batched elementwise + attention_prefill. Tests cover
# parity against the decode-loop, KV cache coherence, short-prompt
# fallback, performance (≥3× speedup), and end-to-end generate().
# Gated on ROCMFORGE_RUN_REAL_MODEL_GPU_TESTS + Qwen3-8B-Q4_K_M at ~/models.
[[test]]
name = "v1_prefill_wmma_test"
path = "tests_v1/prefill_wmma_test.rs"
required-features = ["v1", "gpu"]

# v1.0 Phase-2 Schritt 2.1.5 FP8 follow-up.
# Switches dispatch_prefill_wmma_gemm from _fp16 to _fp8 WMMA
# kernels (Block-A pair-packing path). Tests: FP8/FP16 top-1
# parity, KV-cache coherence, throughput gate (≥ 900 tok/s on
# 31-tok prompt), end-to-end generate().
[[test]]
name = "v1_prefill_fp8_test"
path = "tests_v1/prefill_fp8_test.rs"
required-features = ["v1", "gpu"]

# Post-2.1.5 follow-up — un-fused gate_up_swiglu on decode path.
# Replaces the fused 20 %-BW kernel with 2× q4_k_q8_inline + swiglu.
# rocprof baseline: gate_up_swiglu = 65 % of decode time @ 20 % BW.
# Projected: 437 µs → ~90 µs, decode 40 tok/s → ~77-89 tok/s.
[[test]]
name = "v1_unfused_gate_up_test"
path = "tests_v1/unfused_gate_up_test.rs"
required-features = ["v1", "gpu"]

# Phase 2 Schritt 2.1.4 — Q6_K Q8-inline GEMV variant.
# Adds a second Q6_K kernel so the Bandit can pick between
# q6_k_standard and q6_k_q8_inline (same pattern Q4_K already uses).
[[test]]
name = "v1_q6k_q8_inline_test"
path = "tests_v1/q6k_q8_inline_test.rs"
required-features = ["v1", "gpu"]

# Dispatch-optimisation follow-up (2026-04-23).
# O(1) BufferId -> *mut c_void array + per-node Bandit-committed
# kernel cache. ROCMFORGE_LEGACY_DISPATCH=1 toggles back to the
# pre-follow-up HashMap + runtime-query path for A/B regression.
[[test]]
name = "v1_dispatch_optimization_test"
path = "tests_v1/dispatch_optimization_test.rs"
required-features = ["v1", "gpu"]

# Q4_K sudot4 kernel upgrade. Replaces the 32 scalar int8 MACs per
# sub-block with 8 × `__builtin_amdgcn_sudot4` (gfx1201 v_dot4_i32_iu8).
# Registered as a third Bandit variant for Q4_K shapes; the runtime
# picks it if it wins the timing.
[[test]]
name = "v1_sudot4_kernel_test"
path = "tests_v1/sudot4_kernel_test.rs"
required-features = ["v1", "gpu"]

# HIP-Graph decode integration (2026-04-23 — Option C).
# Capture once, replay with per-token SetParams for kv_pos + seq_len.
# Tests: legacy vs graph output parity, perf non-regression, prefill
# untouched, ROCMFORGE_DISABLE_HIP_GRAPH=1 toggle.
[[test]]
name = "v1_hip_graph_integration_test"
path = "tests_v1/hip_graph_integration_test.rs"
required-features = ["v1", "gpu"]

# Phase 2 Schritt 1/3 — llama.cpp MMVQ port: Q8_1 activation pre-quantizer.
# Standalone kernel that writes 36-byte blocks (`half2 ds` + `int8[32] qs`)
# bit-identical to llama.cpp's `block_q8_1`. Consumer kernel lands in 2/3.
[[test]]
name = "v1_quantize_q8_1_test"
path = "tests_v1/quantize_q8_1_test.rs"
required-features = ["v1", "gpu"]

# Phase 2 Schritt 2/3 — llama.cpp MMVQ kernel port for Q4_K × Q8_1 GEMV.
# 1:1 port of mmvq.cu specialised for ncols_dst=1, has_fusion=false, RDNA4.
# Parity + isolated kernel benchmark across all 4 Qwen3-8B Q4_K shapes.
# Bandit registration is a follow-up driven by the benchmark outcome.
[[test]]
name = "v1_mmvq_kernel_test"
path = "tests_v1/mmvq_kernel_test.rs"
required-features = ["v1", "gpu"]

[[test]]
name = "v1_mmvq_debug_test"
path = "tests_v1/mmvq_debug_test.rs"
required-features = ["v1", "gpu"]

# Phase 2 Schritt 2b — MMVQ-residual kernel (fused GEMV + residual-add
# epilog). Tests parity vs CPU + MMVQ-composite, benchmarks vs the
# predecessor q4_k_q8_inline_residual.
[[test]]
name = "v1_mmvq_residual_test"
path = "tests_v1/mmvq_residual_test.rs"
required-features = ["v1", "gpu"]

# Phase 2 Schritt 3 — MMVQ Gate + Up + SwiGLU fused.
# Two parallel Q4_K dots over the same Q8_1 activation + silu(gate)×up
# epilog in register. Replaces the 5-kernel unfused gate/up sequence.
[[test]]
name = "v1_mmvq_fused_test"
path = "tests_v1/mmvq_fused_test.rs"
required-features = ["v1", "gpu"]

# Phase 2 Schritt 4 — Q6_K × Q8_1 MMVQ kernel (ql/qh 6-bit recon +
# -32 offset via __vsubss4, same cooperative tiling as Q4_K MMVQ).
[[test]]
name = "v1_q6k_mmvq_test"
path = "tests_v1/q6k_mmvq_test.rs"
required-features = ["v1", "gpu"]

# Phase 2.2A — FP8-E5M2 (bf8) KV-cache. Opt-in via ROCMFORGE_KV_FP8=1;
# halves-then-halves-again the KV-cache footprint, enabling 4× context
# at the same VRAM budget. Tests cover the bf8 roundtrip, append/read
# layout, and attention parity vs FP32.
[[test]]
name = "v1_fp8_kv_cache_test"
path = "tests_v1/fp8_kv_cache_test.rs"
required-features = ["v1", "gpu"]

# Phase 2.4 — multi-turn KV-cache persistence + streaming.
# HARD GATE test: Alice-test (turn-2 must remember the name introduced
# in turn-1). Gated on ROCMFORGE_RUN_REAL_MODEL_GPU_TESTS=1.
[[test]]
name = "v1_multi_turn_test"
path = "tests_v1/multi_turn_test.rs"
required-features = ["v1", "gpu"]

# Phase 3 pre-work — Llama-3.1-8B-Instruct-Q4_K_M validation. Multi-turn
# Alice HARD GATE + repetition-stress with repeat_penalty=1.1.
[[test]]
name = "v1_llama31_validation_test"
path = "tests_v1/llama31_validation_test.rs"
required-features = ["v1", "gpu"]

# Phase 3 pre-work — CPU-only root-cause probe for Llama-3.1-Q4_K_M
# quality issue. Dumps GGUF metadata for (1) tied weights, (2) RoPE
# freq_base, (3) GQA, (4) BOS. No GPU required.
[[test]]
name = "v1_llama31_root_cause_probe"
path = "tests_v1/llama31_root_cause_probe.rs"
required-features = ["v1", "gpu"]

# C1 — Llama-3.1 chat-template special-token probe. Verifies that our
# tokenizer encodes <|begin_of_text|>, <|start_header_id|>, <|eot_id|>
# etc. as single token IDs (not split into sub-tokens).
[[test]]
name = "v1_llama31_token_probe"
path = "tests_v1/llama31_token_probe.rs"
required-features = ["v1", "gpu"]

# Mistral chat-template token probe — checks whether our BPE encodes
# [INST] and [/INST] as single token IDs or splits them.
[[test]]
name = "v1_mistral_token_probe"
path = "tests_v1/mistral_token_probe.rs"
required-features = ["v1", "gpu"]

# P0.1b — Template-parametrised WMMA GEMM for Q4_K FP16. Parity
# Template<64,64,32> vs original hard-coded kernel, correctness of
# Template<128,128,32> vs CPU reference, and perf gate at Qwen-scale.
[[test]]
name = "v1_wmma_tiled_test"
path = "tests_v1/wmma_tiled_test.rs"
required-features = ["v1", "gpu"]

# P0.2 MMQ-Port Step 1 — integer WMMA smoke + block_q8_1_mmq quantiser.
# Verifies the gfx1201 i32 WMMA intrinsic compiles and produces correct
# output, plus that the 144-byte mmq activation format quantises
# identically to a scalar CPU reference.
[[test]]
name = "v1_mmq_infra_test"
path = "tests_v1/mmq_infra_test.rs"
required-features = ["v1", "gpu"]

# P0.2 MMQ-Port Step 2 — minimal single-tile Q4_K integer-WMMA kernel
# parity test. M=N=16, K=256 hardcoded; single-warp, single-block.
[[test]]
name = "v1_mmq_q4_k_minimal_test"
path = "tests_v1/mmq_q4_k_minimal_test.rs"
required-features = ["v1", "gpu"]

# P0.2 MMQ-Port Step 3 — scaled MMQ-Q4_K kernel (variable M,N,K).
# Parity vs CPU FP32 reference across small shapes + one Qwen3 QKV
# shape (M=64, N=K=4096) to verify the grid/outer-K paths.
[[test]]
name = "v1_mmq_q4_k_scaleup_test"
path = "tests_v1/mmq_q4_k_scaleup_test.rs"
required-features = ["v1", "gpu"]

# P0.2 MMQ-Port Step 5 — multi-warp scale-up.
# Parity 4W vs 1W on identical inputs (proves the warp-id offset is the
# only change), 4W vs CPU on Qwen3 shapes, M-boundary correctness for
# non-multiple-of-64 M, and isolated-kernel perf comparison.
[[test]]
name = "v1_mmq_multiwarp_test"
path = "tests_v1/mmq_multiwarp_test.rs"
required-features = ["v1", "gpu"]

# P0.2 MMQ-Port Step 6 — Q6_K integer-WMMA port.
# Q6_K dequant correctness (ql+qh→signed int8), 4W vs 1W bit-parity,
# parity vs FP32 CPU reference and the existing FP16-WMMA Q6_K kernel.
[[test]]
name = "v1_mmq_q6_k_test"
path = "tests_v1/mmq_q6_k_test.rs"
required-features = ["v1", "gpu"]

# P0.3 Attention v2 — multi-thread softmax + GQA-LDS-sharing.
# Parity v2 vs v1, causal mask, GQA equivalence, dynamic gqa_ratio, perf.
[[test]]
name = "v1_attention_v2_test"
path = "tests_v1/attention_v2_test.rs"
required-features = ["v1", "gpu"]

# v1.0 inference CLI entry point (Phase 1: --list-tensors only).
[[bin]]
name = "rocmforge-v1"
path = "src/bin/rocmforge_v1.rs"
required-features = ["v1"]

[profile.release]
opt-level = 3
lto = "thin"
